--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>HackoFiesta</title>
     <link rel="stylesheet" href="index.css">
     <link rel="stylesheet" type="text/css" href="style.css"/>  
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
 <body>
@@ -13,15 +14,16 @@
 
         <!-- Main Body -->
         <div class="container" style="width: 90%; height: 90vh;">
+            <div class="v-links">
             <p class="version">V 3.0</p>
             <div class="links">
                 <ul>
-                    <li><a href="#">Twitter</a></li>
-                    <li><a href="#">LinkedIn</a></li>
-                    <li><a href="#">Instagram</a></li>
-                    <li><a href="#">Facebook</a></li>
-                    <li><a href="#">Discord</a></li>
-                </ul>
+                    <li><a href="#" ><i class="fab fa-twitter" style="font-size: 21px;"></i></a></li>
+                    <li><a href="#" ><i class="fab fa-linkedin" style="font-size: 21px;"></i></a></li>
+                    <li><a href="#"><i class="fab fa-instagram" style="font-size: 21px;"></i></a></li>
+                    <li><a href="#" ><i class="fab fa-facebook-f" style="font-size: 21px;"></i></a></li>
+                    <li><a href="#" ><i class="fab fa-discord" style="font-size: 21px;"></i></i></a></li>
+            </div>
             </div>
             <div class="hof-main">
                 <!-- <h1 class="hof" data-shadow='HackoFiesta'>HackoFiesta</h1> -->
