2 team mem per row in mobile

--- a/index.html
+++ b/index.html
@@ -944,7 +944,7 @@
               </div>
               <div class="team-content">
                 <div class="contentBx">
-                  <h3>MOIN PATHAN KHAN<br /><br /><span>Co-Lead Organizer</span></h3>
+                  <h3>MOIN KHAN PATHAN<br /><br /><span>Co-Lead Organizer</span></h3>
                 </div>
                 <ul class="sci">
                   <!-- <li style="--i: 1">
