--- a/index.html
+++ b/index.html
@@ -532,7 +532,7 @@
       <div class="faq-main" style="background-image: url(./images/47061-shapes-background.gif);">
         <div class="container-faq">
           <div class="faq-animation">
-            <lottie-player src="https://assets9.lottiefiles.com/private_files/lf30_1phqfxry.json"  background="transparent"  speed="1"  style="width: 200px; height: 200px;"></lottie-player>
+            <lottie-player src="https://assets9.lottiefiles.com/private_files/lf30_1phqfxry.json"  background="transparent" loop speed="1"  autoplay style="width: 200px; height: 200px;"></lottie-player>
           </div>
           <div class="Prizes-heading faq-h" style="background-color:transparent;width:100%;border-bottom:0px;font-size: 2em;">
             <span style="border-bottom:3px solid black;letter-spacing:0.3rem;line-height: 1.2;">Frequently Asked
