sponsors size in obile

--- a/index.html
+++ b/index.html
@@ -703,7 +703,7 @@
         <div class="sponsor__row">
           <a href="https://koii.network" target="_blank" data-aos="zoom-in">
             <div class="sponsor__card">
-              <img src="./img/sponsor/Koii Logo blue.png" style="height:100px;width: 100px;" alt="">
+              <img src="./img/sponsor/Koii Logo blue.png"  class="koiii" style="height:90px;width: 90px;" alt="">
             </div>
           </a>
         </div>
