sponsors size in obile

--- a/index.html
+++ b/index.html
@@ -835,37 +835,37 @@
         </div>
         <div class="sponsor__row anchor">
           <a href="https://www.instagram.com/codehours/" target="_blank" data-aos="zoom-in">
-            <div class="sponsor__card noback">
+            <div class="sponsor__card noback noback2">
               <img src="./img/sponsor/codehours.jpg" alt="">
             </div>
           </a>
           <a href="https://www.hackathonsinternational.com/" target="_blank" data-aos="zoom-in">
-            <div class="sponsor__card noback">
+            <div class="sponsor__card noback noback2">
               <img src="./img/sponsor/Hackathons International 2.png" alt="">
             </div>
           </a>
           <a href="https://thegirlcode.co/" target="_blank" data-aos="zoom-in">
-            <div class="sponsor__card noback">
+            <div class="sponsor__card noback noback2">
               <img src="./img/sponsor/the-girl-code.png" alt="">
             </div>
           </a>
           <a href="https://www.c-sharpcorner.com/" target="_blank" data-aos="zoom-in">
-            <div class="sponsor__card noback" style="background: white;">
+            <div class="sponsor__card noback noback2" style="background: white;">
               <img src="./img/sponsor/Csharp-Corner-Logo-3-min.png" alt="">
             </div>
           </a>
           <a href="https://bchaindynamics.in/" target="_blank" data-aos="zoom-in">
-            <div class="sponsor__card noback">
+            <div class="sponsor__card noback noback2">
               <img src="./img/sponsor/BChain Dynamics Logo White.png" alt="">
             </div>
           </a>
           <a href="https://egghead.io/" target="_blank" data-aos="zoom-in">
-            <div class="sponsor__card noback" style="background: white;">
+            <div class="sponsor__card noback noback2" style="background: white;">
               <img src="./img/sponsor/egghead_logo.png" alt="">
             </div>
           </a>
           <a href="https://linktr.ee/codefloworg" target="_blank" data-aos="zoom-in">
-            <div class="sponsor__card noback">
+            <div class="sponsor__card noback noback2">
               <img src="./img/sponsor/codeflow.jpeg" alt="">
             </div>
           </a>
