--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
 </head>
 
 <body>
+  <div class="pre-loader" id="preloader">
+    <div class="loading">Loading</div>
+  </div>
   <div class="overall">
     <!-- partial:index.partial.html -->
     <link href="https://fonts.googleapis.com/css?family=Roboto+Mono" rel="stylesheet" />
