--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   <div class="pre-loader" id="preloader">
     <div class="loading">Loading</div>
   </div>
-  <div class="overall">
+  <div class="overall" id="overall">
     <!-- partial:index.partial.html -->
     <link href="https://fonts.googleapis.com/css?family=Roboto+Mono" rel="stylesheet" />
 
