--- a/index.html
+++ b/index.html
@@ -932,6 +932,16 @@
               <img src="./img/sponsor/termius.png" alt="">
             </div>
           </a>
+          <a href="https://1password.com/" target="_blank" data-aos="zoom-in">
+            <div class="sponsor__card">
+              <img src="./img/sponsor/1Password-Logo.wine.svg" alt="">
+            </div>
+          </a>
+          <a href="https://balsamiq.com/" target="_blank" data-aos="zoom-in">
+            <div class="sponsor__card">
+              <img src="./img/sponsor/balsamiq-logo-screen.png" alt="">
+            </div>
+          </a>
         </div>
         <h2 class="tier-heading"> Youth Community Partner</h2>
         <div class="sponsor__row">
@@ -967,17 +977,17 @@
         </div>
         <h2 class="tier-heading">Certificate Partner</h2>
         <div class="sponsor__row">
-          <a href="" target="_blank" data-aos="zoom-in">
+          <a href="https://givemycertificate.com" target="_blank" data-aos="zoom-in">
             <div class="sponsor__card">
-              <img src="" style="width:45%;height:auto;align-self:center;" alt="">
+              <img src="https://givemycertificate.com/style/images/GMC.png" style="width: 30%;height:100%;align-self:center;" alt="">
             </div>
           </a>
         </div>
         <h2 class="tier-heading">Media Partner</h2>
         <div class="sponsor__row">
-          <a href="" target="_blank" data-aos="zoom-in">
+          <a href="https://www.noticebard.com" target="_blank" data-aos="zoom-in">
             <div class="sponsor__card">
-              <img src="" style="width:45%;height:auto;align-self:center;" alt="">
+              <img src="./img/sponsor/Noticebard-newnew-logo.png" style="width:45%;height:auto;align-self:center;" alt="">
             </div>
           </a>
         </div>
@@ -1016,11 +1026,6 @@
               <img src="./img/sponsor/interviewCake.png" alt="">
             </div>
           </a>
-          <a href="https://balsamiq.com/" target="_blank" data-aos="zoom-in">
-            <div class="sponsor__card sponsor_card2">
-              <img src="./img/sponsor/balsamiq-logo-screen.png" alt="">
-            </div>
-          </a>
           <a href="https://www.dailybot.com/" target="_blank" data-aos="zoom-in">
             <div class="sponsor__card sponsor_card2" style="background: white;">
               <img src="./img/sponsor/dailybot_iso_logo_transparent.png" alt="">
@@ -1041,11 +1046,6 @@
               <img src="./img/sponsor/yocket.png" style="height:90%" alt="">
             </div>
           </a>
-          <a href="https://1password.com/" target="_blank" data-aos="zoom-in">
-            <div class="sponsor__card sponsor_card2" style="background: white;">
-              <img src="./img/sponsor/1Password-Logo.wine.svg" alt="">
-            </div>
-          </a>
           <a href="https://rstudio.com/" target="_blank" data-aos="zoom-in">
             <div class="sponsor__card sponsor_card2" style="background: white;">
               <img src="./img/sponsor/RStudio-Logo-Flat.png" style="width: 70%;" alt="">
@@ -1060,16 +1060,6 @@
           <a href="https://www.geeksforgeeks.org/" target="_blank" data-aos="zoom-in">
             <div class="sponsor__card sponsor_card2">
               <img src="./img/sponsor/gfg_complete_logo_2x-min.png" alt="">
-            </div>
-          </a>
-          <a href="http://blogadda.com/" target="_blank" data-aos="zoom-in">
-            <div class="sponsor__card sponsor_card2">
-              <img src="./img/sponsor/blogadda.png" style="width: 60%;" alt="">
-            </div>
-          </a>
-          <a href="https://www.noticebard.com/" target="_blank" data-aos="zoom-in">
-            <div class="sponsor__card sponsor_card2">
-              <img src="./img/sponsor/Noticebard-newnew-logo.png" alt="">
             </div>
           </a>
         </div>
