community sponser updated

--- a/index.html
+++ b/index.html
@@ -943,11 +943,16 @@
             </div>
           </a>
         </div>
-        <h2 class="tier-heading"> Youth Community Partner</h2>
+        <h2 class="tier-heading"> Community Partner</h2>
         <div class="sponsor__row">
           <a href="https://www.theeducationtree.com/" target="_blank" data-aos="zoom-in">
             <div class="sponsor__card">
               <img src="./img/sponsor/TET logo black.png" style="width:45%;height:auto;align-self:center;" alt="">
+            </div>
+          </a>
+          <a href="https://gdsc.community.dev/indian-institute-of-information-technology-lucknow/" target="_blank" data-aos="zoom-in">
+            <div class="sponsor__card">
+              <img src="./images/GDSC IIITL Logo- 2.png" style="width:75%;height:auto;align-self:center;" alt="">
             </div>
           </a>
         </div>
@@ -1259,30 +1264,7 @@
               </div>
             </div>
           </div>
-          <div class="team-container" data-aos="fade-up" data-aos-anchor-placement="top-bottom">
-            <div class="team-card board">
-              <div class="imgBx">
-                <img src="./img/Team/Ashutosh_Kumar.jpg" alt="" />
-              </div>
-              <div class="team-content">
-                <div class="contentBx">
-                  <h3>ASHUTOSH RAJPUT<br /><br /><span>Marketing Lead</span></h3>
-                </div>
-                <ul class="sci">
-                  <!-- <li style="--i: 1">
-                  <a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a>
-                </li>
-                <li style="--i: 2">
-                  <a href="#"><i class="fa fa-github" aria-hidden="true"></i></a>
-                </li> -->
-                  <li style="--i: 3">
-                    <a href="https://www.linkedin.com/in/ashutosh-singh-iiitl/" target="_blank"><i
-                        class="fa fa-linkedin" aria-hidden="true"></i></a>
-                  </li>
-                </ul>
-              </div>
-            </div>
-          </div>
+          
           <div class="team-container" data-aos="fade-up" data-aos-anchor-placement="top-bottom">
             <div class="team-card board">
               <div class="imgBx">
@@ -1502,7 +1484,7 @@
               </div>
             </div>
           </div>
-          <div class="team-container" data-aos="fade-up" data-aos-anchor-placement="top-bottom">
+          <!-- <div class="team-container" data-aos="fade-up" data-aos-anchor-placement="top-bottom">
             <div class="team-card board">
               <div class="imgBx">
                 <img src="./img/Team/Mann.jpeg" alt="" />
@@ -1512,6 +1494,24 @@
                   <h3>Mann<br /><br /><span>Design Executive</span></h3>
                 </div>
                 <ul class="sci">
+                  <li style="--i: 3">
+                    <a href="https://www.linkedin.com/in/mann-chhikara-52173b210" target="_blank"><i
+                        class="fa fa-linkedin" aria-hidden="true"></i></a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </div> -->
+          <div class="team-container" data-aos="fade-up" data-aos-anchor-placement="top-bottom">
+            <div class="team-card board">
+              <div class="imgBx">
+                <img src="./img/Team/Ashutosh_Kumar.jpg" alt="" />
+              </div>
+              <div class="team-content">
+                <div class="contentBx">
+                  <h3>ASHUTOSH RAJPUT<br /><br /><span>Marketing Lead</span></h3>
+                </div>
+                <ul class="sci">
                   <!-- <li style="--i: 1">
                   <a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a>
                 </li>
@@ -1519,7 +1519,7 @@
                   <a href="#"><i class="fa fa-github" aria-hidden="true"></i></a>
                 </li> -->
                   <li style="--i: 3">
-                    <a href="https://www.linkedin.com/in/mann-chhikara-52173b210" target="_blank"><i
+                    <a href="https://www.linkedin.com/in/ashutosh-singh-iiitl/" target="_blank"><i
                         class="fa fa-linkedin" aria-hidden="true"></i></a>
                   </li>
                 </ul>
