Added termius track

--- a/index.html
+++ b/index.html
@@ -537,6 +537,26 @@
           </div>
           <div class=card>
             <div class=image>
+              <img href="https://climateresilient.world/" src='./img/sponsor/termius.png'>
+            </div>
+            <h3 class="modgud" style="padding-bottom: 10px;">Best Hack built with Termius</h3>
+            <div class=content>
+              <h3 style="padding-bottom: 10px;">Best Hack built with Termius</h3>
+              <ul>
+                <li>
+                  For an individual - ₹ 10000
+                </li>
+                <li>
+                  For a team - Max of 4 participants ₹4000 each
+                </li>
+              </ul>
+              <button class="btn-clear btn-light btn-glitch theme-btn"><a
+                  href="https://github.com/CriticalAssetManagement">See
+                  More</a></button>
+            </div>
+          </div>
+          <div class=card>
+            <div class=image>
               <img href="#" src='./img/sponsor/Koii Logo blue.png'>
             </div>
             <h3 class="modgud" style="padding-bottom: 10px;">Best Hack built with Koii</h3>
