Updated terminus track

--- a/index.html
+++ b/index.html
@@ -539,9 +539,9 @@
             <div class=image>
               <img href="https://climateresilient.world/" src='./img/sponsor/termius.png'>
             </div>
-            <h3 class="modgud" style="padding-bottom: 10px;">Best Hack built with Termius</h3>
+            <h3 class="modgud" style="padding-bottom: 10px;">Convert CAMS react desktop site to mobile app</h3>
             <div class=content>
-              <h3 style="padding-bottom: 10px;">Best Hack built with Termius</h3>
+              <h3 style="padding-bottom: 10px;">Convert CAMS react desktop site to mobile app</h3>
               <ul>
                 <li>
                   For an individual - ₹ 10000
