--- a/index.html
+++ b/index.html
@@ -88,6 +88,7 @@
         </nav>
       </div>
     </div>
+    <div class="nav-main">
     <div class="nav" id="nav">
 
       <div class="nav__item">
@@ -180,7 +181,7 @@
       </div>
 
       <div class="nav__active-indicator"></div>
-
+    </div>
     </div>
     <div id="home"></div>
     <div class="container-h" >
