--- a/index.html
+++ b/index.html
@@ -387,9 +387,14 @@
 
           <div class="prizecard-2">
             <div class="page-content-pr">
-              <div class="card-pr" style="background-image: url(./images/runnerup.webp);background-size: cover;">
+              <div class="card-pr"  style="background-image: url(./images/winner.webp);background-size: 100%;background-repeat: no-repeat;background-position: center;">
                 <div class="content-pr">
+                  <!-- <div style="">
                   <h2 class="title-pr">2nd Prize</h2>
+                  </div> -->
+                  <h2 class="title-pr" style="background-color: #937A4D">1st <span> Prize <br> ₹20,000</span>
+                    <span></span>
+                  </h2>
                   <p class="copy-pr">
                     <li>₹15000/-</li>
                     <!-- <li>₹1200/- GFG-discount coupon</li>
@@ -404,9 +409,12 @@
           </div>
           <div class="prizecard-2">
             <div class="page-content-pr">
-              <div class="card-pr" style="background-image: url(./images/winner.webp);background-size: cover;">
+              <div class="card-pr" style="background-image: url(./images/runnerup.webp);background-size: 100%;background-repeat: no-repeat;background-position: center;">
                 <div class="content-pr">
-                  <h2 class="title-pr">1st Prize</h2>
+                  <!-- <h2 class="title-pr">1st Prize</h2> -->
+                  <h2 class="title-pr" style="background-color: #AFACD7;">2nd <span> Prize <br> ₹15,000</span>
+                    <span></span>
+                  </h2>
                   <p class="copy-pr">
                     <li>₹25000/-</li>
                     <!-- <li>₹1200/- GFG-discount coupon</li>
@@ -421,9 +429,12 @@
           </div>
           <div class="prizecard-2">
             <div class="page-content-pr">
-              <div class="card-pr" style="background-image: url(./images/3rd.webp);background-size: cover;">
+              <div class="card-pr" style="background-image: url(./images/3rd.webp);background-size: 100%;background-repeat: no-repeat;background-position: center;" >
                 <div class="content-pr">
-                  <h2 class="title-pr">3rd Prize</h2>
+                  <!-- <h2 class="title-pr">3rd Prize</h2> -->
+                  <h2 class="title-pr" style="background-color: #8E5936;">3rd <span> Prize <br> ₹10,000</span>
+                    <span></span>
+                  </h2>
                   <p class="copy-pr">
                     <li>₹10000/-</li>
                     <!-- <li>₹1200/- GFG-discount coupon</li>
@@ -584,14 +595,14 @@
         <div class="speakers-card-main" style="margin-bottom: 50px;width:80%;justify-content:center;">
           <div class="card-speaker" style="margin-left: 25px;margin-right:25px;" data-aos="fade-up">
             <div class="user-img">
-              <img src="./images/Logan.jpg" style="border-radius: 50%; height: auto; width: 80%;">
+              <img src="./images/Santosh_Yadav.jpg" style="border-radius: 50%; height: auto; width: 80%;">
             </div>
             <div class="stat">
               <h1 class="speaker-name">
-                Logan Kilpatrick</h1>
-              <div class="speaker-content">Julia Language Community Manager</div>
+                Santosh Yadav</h1>
+              <div class="speaker-content">Google Developer Expert for Angular</div>
               <div class="speaker-handle">
-                <a href="https://www.linkedin.com/in/logankilpatrick/">
+                <a href="https://www.linkedin.com/in/santoshyadavdev/" target="_blank">
                   <i class="fab fa-linkedin"
                     style="font-size: 20px;background-color:white;padding:5px;color:black;border-radius:2px;"></i>
                 </a>
@@ -601,12 +612,12 @@
           </div>
           <div class="card-speaker" style="margin-left: 25px;margin-right:25px;" data-aos="fade-up">
             <div class="user-img">
-              <img src="./images/ganesh.jpg" style="border-radius: 50%; height: auto; width: 80%;">
+              <img src="./images/Ameen.jpeg" style="border-radius: 50%; height: auto; width: 80%;">
             </div>
             <div class="stat">
-              <h1 class="speaker-name">
-                Ganesh Swami</h1>
-              <div class="speaker-content">CEO At Covalent</div>
+              <h1 class="speaker-name">Ameen Altajer 
+                </h1>
+              <div class="speaker-content">CEO of INFINITEWARE</div>
               <div class="speaker-handle">
                 <a href="https://www.linkedin.com/in/ganswami/?originalSubdomain=ca">
                   <i class="fab fa-linkedin"
@@ -618,12 +629,12 @@
           </div>
           <div class="card-speaker" style="margin-left: 25px;margin-right:25px;" data-aos="fade-up">
             <div class="user-img">
-              <img src="./images/harish.jpg" style="border-radius: 50%; height: auto; width: 80%;">
+              <img src="./images/Dhananjay.jpg" style="border-radius: 50%; height: auto; width: 80%;">
             </div>
             <div class="stat">
               <h1 class="speaker-name">
-                Harish Raisinghani</h1>
-              <div class="speaker-content">Developer Relations Manager At Covalent</div>
+                Dhananjay Kumar</h1>
+              <div class="speaker-content">Founder geek97</div>
               <div class="speaker-handle">
                 <a href="https://www.linkedin.com/in/harish-raisinghani-yvr/?originalSubdomain=ca">
                   <i class="fab fa-linkedin"
@@ -635,12 +646,12 @@
           </div>
           <div class="card-speaker" style="margin-left: 25px;margin-right:25px;" data-aos="fade-up">
             <div class="user-img">
-              <img src="./images/sarfaraz.jpg" style="border-radius: 50%; height: auto; width: 80%;">
+              <img src="./images/Gavin Mendel-Gleason.jpg" style="border-radius: 50%; height: auto; width: 80%;">
             </div>
             <div class="stat">
               <h1 class="speaker-name">
-                Sarfaraz Hussain</h1>
-              <div class="speaker-content">Data Engineer</div>
+                Gavin Mendel-Gleason</h1>
+              <div class="speaker-content">Chief Technology Officer at TerminusDB</div>
               <div class="speaker-handle">
                 <a href="https://www.linkedin.com/in/sarfaraz-hussain-8123b4132/?originalSubdomain=in">
                   <i class="fab fa-linkedin"
@@ -1285,7 +1296,30 @@
               </div>
             </div>
           </div>
-          
+          <div class="team-container" data-aos="fade-up" data-aos-anchor-placement="top-bottom">
+            <div class="team-card board">
+              <div class="imgBx">
+                <img src="./img/Team/Abhay.jpeg" alt="" />
+              </div>
+              <div class="team-content">
+                <div class="contentBx">
+                  <h3>Abhay Garg<br /><br /><span>Festival Core</span></h3>
+                </div>
+                <ul class="sci">
+                  <!-- <li style="--i: 1">
+                  <a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a>
+                </li>
+                <li style="--i: 2">
+                  <a href="#"><i class="fa fa-github" aria-hidden="true"></i></a>
+                </li> -->
+                  <li style="--i: 3">
+                    <a href="https://www.linkedin.com/in/prayutsu/" target="_blank"><i
+                        class="fa fa-linkedin" aria-hidden="true"></i></a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </div>
           <div class="team-container" data-aos="fade-up" data-aos-anchor-placement="top-bottom">
             <div class="team-card board">
               <div class="imgBx">
